# P10-SoftDesk-Trissi-MohammadSaleh

./: .gitignore  README.md  pyproject.toml  requirements.txt
SoftDesk/: settings.py
SoftDesk/SoftDesk/: settings.py  urls.py
SoftDesk/api/: models.py  permissions.py  serializers.py  urls.py  views.py
SoftDesk/api/migrations/: 0001_initial.py  0002_alter_comment_created_at.py  0002_initial.py  0002_issue.py  0003_comment.py
SoftDesk/users/: models.py  serializers.py  urls.py  views.py
SoftDesk/users/migrations/: 0001_initial.py  0002_auto_20230828_0000.py  0003_remove_user_name_alter_user_age_alter_user_password.py  0003_rename_consent_user_has_consent_alter_user_age_and_more.py  0004_user_username_alter_user_email.py  0005_remove_user_username_alter_user_email.py  0006_remove_user_age_remove_user_consent.py  0007_user_age.py
